// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Status Component should allow label to be optional 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiStat euiStat--leftAligned"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            id="generated-id"
          >
            Status
          </p>
        </div>
        <p
          aria-labelledby="generated-id"
          class="euiTitle euiTitle--xsmall euiStat__title"
        >
          Status: 
          <span
            class="kuiStatusText"
          >
            <img
              alt="Status: yellow"
              data-test-subj="statusIcon"
              src="../plugins/monitoring/icons/health-yellow.svg"
            />
          </span>
           Yellow
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="transportAddress"
    >
      <div
        class="euiStat euiStat--leftAligned"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            id="generated-id"
          />
        </div>
        <p
          aria-labelledby="generated-id"
          class="euiTitle euiTitle--xsmall euiStat__title"
        >
          127.0.0.1:9300
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="documentCount"
    >
      <div
        class="euiStat euiStat--leftAligned"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            id="generated-id"
          >
            Documents
          </p>
        </div>
        <p
          aria-labelledby="generated-id"
          class="euiTitle euiTitle--xsmall euiStat__title"
        >
          24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should allow status to be optional 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="freeDiskSpace"
    >
      <div
        class="euiStat euiStat--leftAligned"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            id="generated-id"
          >
            Free Disk Space
          </p>
        </div>
        <p
          aria-labelledby="generated-id"
          class="euiTitle euiTitle--xsmall euiStat__title"
        >
          173.9 GB
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="documentCount"
    >
      <div
        class="euiStat euiStat--leftAligned"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            id="generated-id"
          >
            Documents
          </p>
        </div>
        <p
          aria-labelledby="generated-id"
          class="euiTitle euiTitle--xsmall euiStat__title"
        >
          24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should render metrics in a summary bar 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        class="euiStat euiStat--leftAligned"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            id="generated-id"
          >
            Status
          </p>
        </div>
        <p
          aria-labelledby="generated-id"
          class="euiTitle euiTitle--xsmall euiStat__title"
        >
          Status: 
          <span
            class="kuiStatusText"
          >
            <img
              alt="Status: green"
              data-test-subj="statusIcon"
              src="../plugins/monitoring/icons/health-green.svg"
            />
          </span>
           Green
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="freeDiskSpace"
    >
      <div
        class="euiStat euiStat--leftAligned"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            id="generated-id"
          >
            Free Disk Space
          </p>
        </div>
        <p
          aria-labelledby="generated-id"
          class="euiTitle euiTitle--xsmall euiStat__title"
        >
          173.9 GB
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="documentCount"
    >
      <div
        class="euiStat euiStat--leftAligned"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            id="generated-id"
          >
            Documents
          </p>
        </div>
        <p
          aria-labelledby="generated-id"
          class="euiTitle euiTitle--xsmall euiStat__title"
        >
          24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;
